--- a/readcsv/todo
+++ b/readcsv/todo
@@ -1,1 +1,6 @@
+P1
 https://medium.com/swlh/processing-16gb-file-in-seconds-go-lang-3982c235dfa2
+write test case and functional test
+logging
+P2
+make it as http call
